--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "electron-squirrel-startup": "^1.0.1"
   }
 }
